Update: working on the user
